--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 	<link rel="stylesheet" href="./style.css">
 </head>
-
+<p>baru nih</p>
 <body>
-	<!-- Hero / Masthead -->
+	<!-- Heri / Masthead -->
 	<header class="hero">
 		<!-- Menu -->
 		<nav class="navigation">
